--- a/policy.html
+++ b/policy.html
@@ -3,63 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProtoPad Adventure</title>
-    <link rel="icon" href="image/Fav B.jpg" />
+    <title>Adventure Great Star</title>
+    <link rel="icon" href="img/fav B.jpg" />
+
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
   <body class="back">
-    <header class="header">
+    <header class="header header-policy-terms">
       <div class="header__background"></div>
       <nav class="navigation">
-        <a href="/" class="navigation__link">
-          <img
-            class="navigation-img"
-            href="/"
-            src="/image/header/Logo.png"
-            alt=""
-        /></a>
         <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="/" class="navigation__link">Ev</a>
+          </li>
           <li class="navigation__item">
             <a href="/#about" class="navigation__link">Hakkımızda</a>
           </li>
           <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Ders Programları</a>
+            <a href="/#gallery" class="navigation__link">Dalış Kursları </a>
           </li>
           <li class="navigation__item">
-            <a href="/#blog" class="navigation__link">Blog ve İpuçları</a>
+            <a href="/#blog" class="navigation__link">Dalış Noktaları</a>
           </li>
           <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Müşteri Yorumları</a>
+            <a href="/#rental" class="navigation__link">Ekipman Kiralama</a>
           </li>
           <li class="navigation__item">
-            <a href="/#contact " class="navigation__link"
+            <a href="/#reviews" class="navigation__link">Müşteri Yorumları </a>
+          </li>
+          <li class="navigation__item">
+            <a href="/#contact" class="navigation__link"
               >İletişim ve Rezervasyon</a
+            >
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="cookie.html" class="navigation__link">Çerez Politikası</a>
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="policy.html" class="navigation__link"
+              >Gizlilik Politikası</a
+            >
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="terms.html" class="navigation__link"
+              >Şartlar ve Koşullar</a
             >
           </li>
         </ul>
 
         <div class="header__button-wrapper">
-          <a href="/" class="">
-            <img
-              href="/"
-              class="header__icon-button"
-              src="image/header/Logo.png"
-              alt=""
-          /></a>
-
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="image/header/Frame 2.png"
+              src="img/header/menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="image/header/ep_close-bold.png"
+              src="img/header/ep_close-bold.png"
               alt=""
             />
           </button>
@@ -71,60 +76,60 @@
       <section>
         <div class="policy-terms-container">
           <p class="policy-terms-text">
-            protopadventure.com için Gizlilik Politikası
+            adventuregreatstar.com için Gizlilik Politikası
           </p>
           <p class="policy-terms-texts">
-            protopadventure.com adresinden erişilebilen protopadventure.com’da,
-            ana önceliklerimizden biri ziyaretçilerimizin gizliliğidir. Bu
-            Gizlilik Politikası belgesi, protopadventure.com tarafından toplanan
-            ve kaydedilen bilgi türlerini ve bunları nasıl kullandığımızı
-            içerir.
-          </p>
-          <p class="policy-terms-texts">
+            adventuregreatstar.com adresinden erişilebilen
+            adventuregreatstar.com’da, ana önceliklerimizden biri
+            ziyaretçilerimizin gizliliğidir. Bu Gizlilik Politikası belgesi,
+            adventuregreatstar.com tarafından toplanan ve kaydedilen bilgi
+            türlerini ve bunları nasıl kullandığımızı içerir. <br />
             Ek sorularınız varsa veya Gizlilik Politikamız hakkında daha fazla
             bilgiye ihtiyaç duyuyorsanız bizimle iletişime geçmekten çekinmeyin.
           </p>
+
           <h2 class="policy-terms-text-top">
             Genel Veri Koruma Yönetmeliği (GDPR)
           </h2>
           <p class="policy-terms-texts">
-            Biz, bilgilerinizin Veri Sorumlusuyuz.
+            Biz, bilgilerinizin Veri Sorumlusuyuz..
           </p>
           <p class="policy-terms-texts">
-            protopadventure.com’un bu Gizlilik Politikasında açıklanan kişisel
-            bilgileri toplama ve kullanma konusundaki yasal dayanağı,
+            adventuregreatstar.com’un bu Gizlilik Politikasında açıklanan
+            kişisel bilgileri toplama ve kullanma konusundaki yasal dayanağı,
             topladığımız Kişisel Bilgilere ve bilgileri topladığımız belirli
             bağlama bağlıdır:
           </p>
           <ul class="terms-list">
-            <li>protopadventure.com sizinle bir sözleşme yapmak zorundadır.</li>
-            <li>protopadventure.com’a bunu yapma izni verdiniz.</li>
             <li>
-              Kişisel bilgilerinizin işlenmesi protopadventure.com’un meşru
+              adventuregreatstar.com sizinle bir sözleşme yapmak zorundadır.
+            </li>
+            <li>adventuregreatstar.com’a bunu yapma izni verdiniz.</li>
+            <li>
+              Kişisel bilgilerinizin işlenmesi adventuregreatstar.com’un meşru
               menfaatleri doğrultusundadır.
             </li>
-            <li>protopadventure.com’un yasaya uyması gerekiyor.</li>
+            <li>adventuregreatstar.com’un yasaya uyması gerekiyor.</li>
           </ul>
           <p class="policy-terms-texts">
-            protopadventure.com, kişisel bilgilerinizi yalnızca bu Gizlilik
+            adventuregreatstar.com, kişisel bilgilerinizi yalnızca bu Gizlilik
             Politikasında belirtilen amaçlar için gerekli olduğu sürece
             saklayacaktır. Yasal yükümlülüklerimize uymak, anlaşmazlıkları
             çözmek ve politikalarımızı uygulamak için bilgilerinizi gerekli
-            ölçüde saklayacak ve kullanacağız.
-          </p>
-          <p class="policy-terms-texts">
+            ölçüde saklayacak ve kullanacağız.<br />
             Avrupa Ekonomik Alanı’nda (AEA) ikamet ediyorsanız, belirli veri
             koruma haklarınız vardır. Hakkınızda hangi Kişisel Bilgileri
             tuttuğumuzu öğrenmek ve bunların sistemlerimizden kaldırılmasını
             istiyorsanız lütfen bizimle iletişime geçin.
           </p>
+
           <p class="policy-terms-texts">
             Belirli durumlarda aşağıdaki veri koruma haklarına sahipsiniz:
           </p>
           <ul class="terms-list">
             <li>
               Hakkınızda sahip olduğumuz bilgilere erişme, bunları güncelleme
-              veya silme hakkı
+              veya silme hakkı.
             </li>
             <li>Düzeltme hakkı</li>
             <li>İtiraz hakkı</li>
@@ -135,27 +140,27 @@
 
           <h2 class="policy-terms-text-top">Günlük Dosyaları</h2>
           <p class="policy-terms-texts">
-            protopadventure.com follows a standard procedure of using log files.
-            These files log visitors when they visit websites. All hosting
-            companies do this as part of hosting services’ analytics. The
-            information collected by log files includes internet protocol (IP)
-            addresses, browser type, Internet Service Provider (ISP), date and
-            time stamp, referring/exit pages, and possibly the number of clicks.
-            These are not linked to any information that is personally
+            adventuregreatstar.com follows a standard procedure of using log
+            files. These files log visitors when they visit websites. All
+            hosting companies do this as part of hosting services’ analytics.
+            The information collected by log files includes internet protocol
+            (IP) addresses, browser type, Internet Service Provider (ISP), date
+            and time stamp, referring/exit pages, and possibly the number of
+            clicks. These are not linked to any information that is personally
             identifiable. The purpose of the information is for analyzing
             trends, administering the site, tracking users’ movement on the
             website, and gathering demographic information.
           </p>
           <h2 class="policy-terms-text-top">Cookies and Web Beacons</h2>
           <p class="policy-terms-texts">
-            Like any other website, protopadventure.com uses “cookies.” These
+            Like any other website, adventuregreatstar.com uses “cookies.” These
             cookies are used to store information including visitors’
             preferences, and the pages on the website that the visitor accessed
             or visited. The information is used to optimize the users’
             experience by customizing our web page content based on visitors’
             browser type and/or other information.
           </p>
-          <h2 class="policy-terms-text-top">Google DoubleClick DART Çerezi</h2>
+          <h2 class="policy-terms-text-top">Google DoubleClick DART Cookie</h2>
           <p class="policy-terms-texts">
             Google is one of a third-party vendor on our site. It also uses
             cookies, known as DART cookies, to serve ads to our site visitors
@@ -200,26 +205,25 @@
           <h2 class="policy-terms-text-top">Privacy Policies</h2>
           <p class="policy-terms-texts">
             You may consult this list to find the Privacy Policy for each of the
-            advertising partners of protopadventure.com.
-          </p>
-          <p class="policy-terms-texts">
+            advertising partners of adventuregreatstar.com. <br />
             Third-party ad servers or ad networks use technologies like cookies,
             JavaScript, or Web Beacons that are used in their respective
-            advertisements and links that appear on protopadventure.com, which
-            are sent directly to users’ browsers. They automatically receive
-            your IP address when this occurs. These technologies are used to
-            measure the effectiveness of their advertising campaigns and/or to
-            personalize the advertising content that you see on websites that
-            you visit.
+            advertisements and links that appear on adventuregreatstar.com,
+            which are sent directly to users’ browsers. They automatically
+            receive your IP address when this occurs. These technologies are
+            used to measure the effectiveness of their advertising campaigns
+            and/or to personalize the advertising content that you see on
+            websites that you visit.
           </p>
+
           <p class="policy-terms-texts">
-            Note that protopadventure.com has no access to or control over these
-            cookies that are used by third-party advertisers.
+            Note that adventuregreatstar.com has no access to or control over
+            these cookies that are used by third-party advertisers.
           </p>
 
           <h2 class="policy-terms-text-top">Third Party Privacy Policies</h2>
           <p class="policy-terms-texts">
-            protopadventure.com’s Privacy Policy does not apply to other
+            adventuregreatstar.com’s Privacy Policy does not apply to other
             advertisers or websites. Thus, we are advising you to consult the
             respective Privacy Policies of these third-party ad servers for more
             detailed information. It may include their practices and
@@ -240,8 +244,8 @@
             yönlendirmeye teşvik ediyoruz.
           </p>
           <p class="policy-terms-texts">
-            protopadventure.com, 13 yaşın altındaki çocuklardan bilerek Kişisel
-            Tanımlayıcı Bilgi toplamaz. Çocuğunuzun web sitemizde bu tür
+            adventuregreatstar.com, 13 yaşın altındaki çocuklardan bilerek
+            Kişisel Tanımlayıcı Bilgi toplamaz. Çocuğunuzun web sitemizde bu tür
             bilgileri sağladığını düşünüyorsanız, lütfen hemen bizimle iletişime
             geçmenizi önemle rica ederiz ve bu bilgileri kayıtlarımızdan derhal
             kaldırmak için elimizden gelenin en iyisini yapacağız.
@@ -252,10 +256,10 @@
           <p class="policy-terms-texts">
             Gizlilik Politikamız yalnızca çevrimiçi faaliyetlerimiz için
             geçerlidir ve web sitemizi ziyaret edenler için
-            protopadventure.com’da paylaştıkları ve/veya topladıkları bilgilerle
-            ilgili olarak geçerlidir. Bu politika çevrimdışı olarak veya bu web
-            sitesi dışındaki kanallar aracılığıyla toplanan hiçbir bilgi için
-            geçerli değildir.
+            adventuregreatstar.com’da paylaştıkları ve/veya topladıkları
+            bilgilerle ilgili olarak geçerlidir. Bu politika çevrimdışı olarak
+            veya bu web sitesi dışındaki kanallar aracılığıyla toplanan hiçbir
+            bilgi için geçerli değildir.
           </p>
 
           <h2 class="policy-terms-text-top">Onay</h2>
@@ -269,15 +273,15 @@
 
     <footer class="footer">
       <div class="footer-container">
+        <p class="footer-copyright">
+          "© 2024 Adventure Great Star. Tüm hakları saklıdır."
+        </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="cookie.html">Çerez Politikası</a>
           <a class="footer-text" href="policy.html">Gizlilik Politikası </a>
 
           <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
         </div>
-        <p class="footer-copyright">
-          © 2024 ProtoPad Adventure. Tüm hakları saklıdır.
-        </p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
