--- a/terms.html
+++ b/terms.html
@@ -3,63 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProtoPad Adventure</title>
-    <link rel="icon" href="image/Fav B.jpg" />
+    <title>Adventure Great Star</title>
+    <link rel="icon" href="img/fav B.jpg" />
+
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
   <body class="back">
-    <header class="header">
+    <header class="header header-policy-terms">
       <div class="header__background"></div>
       <nav class="navigation">
-        <a href="/" class="navigation__link">
-          <img
-            class="navigation-img"
-            href="/"
-            src="/image/header/Logo.png"
-            alt=""
-        /></a>
         <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="/" class="navigation__link">Ev</a>
+          </li>
           <li class="navigation__item">
             <a href="/#about" class="navigation__link">Hakkımızda</a>
           </li>
           <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Ders Programları</a>
+            <a href="/#gallery" class="navigation__link">Dalış Kursları </a>
           </li>
           <li class="navigation__item">
-            <a href="/#blog" class="navigation__link">Blog ve İpuçları</a>
+            <a href="/#blog" class="navigation__link">Dalış Noktaları</a>
           </li>
           <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Müşteri Yorumları</a>
+            <a href="/#rental" class="navigation__link">Ekipman Kiralama</a>
           </li>
           <li class="navigation__item">
-            <a href="/#contact " class="navigation__link"
+            <a href="/#reviews" class="navigation__link">Müşteri Yorumları </a>
+          </li>
+          <li class="navigation__item">
+            <a href="/#contact" class="navigation__link"
               >İletişim ve Rezervasyon</a
+            >
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="cookie.html" class="navigation__link">Çerez Politikası</a>
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="policy.html" class="navigation__link"
+              >Gizlilik Politikası</a
+            >
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="terms.html" class="navigation__link"
+              >Şartlar ve Koşullar</a
             >
           </li>
         </ul>
 
         <div class="header__button-wrapper">
-          <a href="/" class="">
-            <img
-              href="/"
-              class="header__icon-button"
-              src="image/header/Logo.png"
-              alt=""
-          /></a>
-
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="image/header/Frame 2.png"
+              src="img/header/menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="image/header/ep_close-bold.png"
+              src="img/header/ep_close-bold.png"
               alt=""
             />
           </button>
@@ -70,13 +75,13 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h2 class="policy-terms-texts">
+          <h2 class="policy-terms-text">
             protopadventure.com Web Sitesi Kullanım Şartları ve Koşulları
           </h2>
 
           <h2 class="policy-terms-text">1. Şartlar</h2>
           <p class="policy-terms-text-one">
-            protopadventure.com adresinden erişilebilen bu Web Sitesine
+            adventuregreatstar.com adresinden erişilebilen bu Web Sitesine
             erişerek, bu Web Sitesi Kullanım Şartları ve Koşullarına bağlı
             kalmayı kabul etmiş olursunuz ve geçerli yerel yasalarla ilgili
             anlaşmadan sorumlu olduğunuzu kabul edersiniz. Bu şartlardan
@@ -86,10 +91,10 @@
           </p>
           <h2 class="policy-terms-text">2. Lisans Kullanımı</h2>
           <p class="policy-terms-text-one">
-            protopadventure.com’un Web Sitesi’ndeki materyallerin bir kopyasını
-            yalnızca kişisel, ticari olmayan geçici görüntüleme için geçici
-            olarak indirme izni verilmiştir. Bu bir lisans verme işlemidir,
-            mülkiyet devri değildir ve bu lisans kapsamında şunları
+            adventuregreatstar.com’un Web Sitesi’ndeki materyallerin bir
+            kopyasını yalnızca kişisel, ticari olmayan geçici görüntüleme için
+            geçici olarak indirme izni verilmiştir. Bu bir lisans verme
+            işlemidir, mülkiyet devri değildir ve bu lisans kapsamında şunları
             yapamazsınız:
           </p>
           <ul class="terms-lists">
@@ -99,8 +104,9 @@
               gösterimi için kullanmak;
             </li>
             <li>
-              protopadventure.com Web Sitesinde bulunan herhangi bir yazılımın
-              tersine mühendislik işlemine tabi tutulması girişiminde bulunmak;
+              adventuregreatstar.com Web Sitesinde bulunan herhangi bir
+              yazılımın tersine mühendislik işlemine tabi tutulması girişiminde
+              bulunmak;
             </li>
             <li>
               Materyallerden herhangi bir telif hakkını veya diğer mülkiyet
@@ -120,42 +126,43 @@
           </p>
           <h2 class="policy-terms-text">1. Sorumluluk Reddi</h2>
           <p class="policy-terms-text-one">
-            protopadventure.com’un Web Sitesindeki tüm materyaller “olduğu gibi”
-            sağlanır. protopadventure.com, açık veya zımni hiçbir garanti
-            vermez, bu nedenle diğer tüm garantileri geçersiz kılar. Ayrıca,
-            protopadventure.com, Web Sitesindeki materyallerin kullanımının
-            doğruluğu veya güvenilirliği veya bu materyallerle veya bu Web
-            Sitesine bağlı herhangi bir siteyle ilgili olarak herhangi bir
-            beyanda bulunmaz.
+            adventuregreatstar.com’un Web Sitesindeki tüm materyaller “olduğu
+            gibi” sağlanır. adventuregreatstar.com, açık veya zımni hiçbir
+            garanti vermez, bu nedenle diğer tüm garantileri geçersiz kılar.
+            Ayrıca, adventuregreatstar.com, Web Sitesindeki materyallerin
+            kullanımının doğruluğu veya güvenilirliği veya bu materyallerle veya
+            bu Web Sitesine bağlı herhangi bir siteyle ilgili olarak herhangi
+            bir beyanda bulunmaz.
           </p>
           <h2 class="policy-terms-text">2. Sınırlamalar</h2>
 
           <p class="policy-terms-text-one">
-            protopadventure.com veya tedarikçileri, protopadventure.com’un Web
-            Sitesindeki materyallerin kullanımı veya kullanılamamasıyla ortaya
-            çıkacak herhangi bir zarardan sorumlu tutulmayacaktır.
-            protopadventure.com veya bu Web Sitesinin yetkili bir temsilcisine
-            sözlü veya yazılı olarak böyle bir zarar olasılığı bildirilmiş olsa
-            bile. Bazı yargı bölgeleri, zımni garantiler veya arızi zararlar
-            için sorumluluk sınırlamaları konusunda sınırlamalara izin vermez,
-            bu sınırlamalar sizin için geçerli olmayabilir.
+            adventuregreatstar.com veya tedarikçileri, adventuregreatstar.com’un
+            Web Sitesindeki materyallerin kullanımı veya kullanılamamasıyla
+            ortaya çıkacak herhangi bir zarardan sorumlu tutulmayacaktır.
+            adventuregreatstar.com veya bu Web Sitesinin yetkili bir
+            temsilcisine sözlü veya yazılı olarak böyle bir zarar olasılığı
+            bildirilmiş olsa bile. Bazı yargı bölgeleri, zımni garantiler veya
+            arızi zararlar için sorumluluk sınırlamaları konusunda sınırlamalara
+            izin vermez, bu sınırlamalar sizin için geçerli olmayabilir.
           </p>
           <h2 class="policy-terms-text">3. Revizyonlar ve Hatalar</h2>
 
           <p class="policy-terms-text-one">
-            protopadventure.com’un Web Sitesinde görünen materyaller teknik,
-            tipografik veya fotoğrafik hatalar içerebilir. protopadventure.com,
-            bu Web Sitesinde yer alan materyallerin doğru, eksiksiz veya güncel
-            olduğunu taahhüt etmez. protopadventure.com, Web Sitesinde yer alan
-            materyalleri herhangi bir zamanda önceden haber vermeden
-            değiştirebilir. protopadventure.com, materyalleri güncelleme
-            konusunda herhangi bir taahhütte bulunmaz.
+            adventuregreatstar.com’un Web Sitesinde görünen materyaller teknik,
+            tipografik veya fotoğrafik hatalar içerebilir.
+            adventuregreatstar.com, bu Web Sitesinde yer alan materyallerin
+            doğru, eksiksiz veya güncel olduğunu taahhüt etmez.
+            adventuregreatstar.com, Web Sitesinde yer alan materyalleri herhangi
+            bir zamanda önceden haber vermeden değiştirebilir.
+            adventuregreatstar.com, materyalleri güncelleme konusunda herhangi
+            bir taahhütte bulunmaz.
           </p>
           <h2 class="policy-terms-text">4. Bağlantılar</h2>
           <p class="policy-terms-text-one">
-            protopadventure.com, Web Sitesine bağlı sitelerin tümünü
+            adventuregreatstar.com, Web Sitesine bağlı sitelerin tümünü
             incelememiştir ve bu tür bağlı sitelerin içeriklerinden sorumlu
-            değildir. Herhangi bir bağlantının varlığı, protopadventure.com
+            değildir. Herhangi bir bağlantının varlığı, adventuregreatstar.com
             tarafından sitenin onaylandığı anlamına gelmez. Herhangi bir bağlı
             web sitesinin kullanımı, kullanıcının kendi riski altındadır.
           </p>
@@ -164,10 +171,10 @@
           </h2>
 
           <p class="policy-terms-text-one">
-            protopadventure.com, Web Sitesi için bu Kullanım Şartlarını herhangi
-            bir zamanda önceden bildirimde bulunmaksızın revize edebilir. Bu Web
-            Sitesini kullanarak, bu Kullanım Şartları ve Koşullarının güncel
-            sürümüne bağlı kalmayı kabul etmiş olursunuz.
+            adventuregreatstar.com, Web Sitesi için bu Kullanım Şartlarını
+            herhangi bir zamanda önceden bildirimde bulunmaksızın revize
+            edebilir. Bu Web Sitesini kullanarak, bu Kullanım Şartları ve
+            Koşullarının güncel sürümüne bağlı kalmayı kabul etmiş olursunuz.
           </p>
           <h2 class="policy-terms-text">6. Gizliliğiniz</h2>
           <p class="policy-terms-text-one">
@@ -176,9 +183,9 @@
 
           <h2 class="policy-terms-text text-bold">7. Yürürlükteki Kanun</h2>
           <p class="policy-terms-text-one">
-            protopadventure.com Web Sitesi ile ilgili her türlü talep, kanunlar
-            ihtilafı hükümleri dikkate alınmaksızın yürürlükteki yasalara tabi
-            olacaktır.
+            adventuregreatstar.com Web Sitesi ile ilgili her türlü talep,
+            kanunlar ihtilafı hükümleri dikkate alınmaksızın yürürlükteki
+            yasalara tabi olacaktır.
           </p>
         </div>
       </section>
@@ -186,15 +193,15 @@
 
     <footer class="footer">
       <div class="footer-container">
+        <p class="footer-copyright">
+          "© 2024 Adventure Great Star. Tüm hakları saklıdır."
+        </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="cookie.html">Çerez Politikası</a>
           <a class="footer-text" href="policy.html">Gizlilik Politikası </a>
 
           <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
         </div>
-        <p class="footer-copyright">
-          © 2024 ProtoPad Adventure. Tüm hakları saklıdır.
-        </p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
