--- a/cookie.html
+++ b/cookie.html
@@ -3,63 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProtoPad Adventure</title>
-    <link rel="icon" href="image/Fav B.jpg" />
+    <title>Adventure Great Star</title>
+    <link rel="icon" href="img/fav B.jpg" />
+
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
   <body class="back">
-    <header class="header">
+    <header class="header header-policy-terms">
       <div class="header__background"></div>
       <nav class="navigation">
-        <a href="/" class="navigation__link">
-          <img
-            class="navigation-img"
-            href="/"
-            src="/image/header/Logo.png"
-            alt=""
-        /></a>
         <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="/" class="navigation__link">Ev</a>
+          </li>
           <li class="navigation__item">
             <a href="/#about" class="navigation__link">Hakkımızda</a>
           </li>
           <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Ders Programları</a>
+            <a href="/#gallery" class="navigation__link">Dalış Kursları </a>
           </li>
           <li class="navigation__item">
-            <a href="/#blog" class="navigation__link">Blog ve İpuçları</a>
+            <a href="/#blog" class="navigation__link">Dalış Noktaları</a>
           </li>
           <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Müşteri Yorumları</a>
+            <a href="/#rental" class="navigation__link">Ekipman Kiralama</a>
           </li>
           <li class="navigation__item">
-            <a href="/#contact " class="navigation__link"
+            <a href="/#reviews" class="navigation__link">Müşteri Yorumları </a>
+          </li>
+          <li class="navigation__item">
+            <a href="/#contact" class="navigation__link"
               >İletişim ve Rezervasyon</a
+            >
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="cookie.html" class="navigation__link">Çerez Politikası</a>
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="policy.html" class="navigation__link"
+              >Gizlilik Politikası</a
+            >
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="terms.html" class="navigation__link"
+              >Şartlar ve Koşullar</a
             >
           </li>
         </ul>
 
         <div class="header__button-wrapper">
-          <a href="/" class="">
-            <img
-              href="/"
-              class="header__icon-button"
-              src="image/header/Logo.png"
-              alt=""
-          /></a>
-
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="image/header/Frame 2.png"
+              src="img/header/menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="image/header/ep_close-bold.png"
+              src="img/header/ep_close-bold.png"
               alt=""
             />
           </button>
@@ -130,9 +135,7 @@
             edebilmemiz için sitede ne kadar zaman geçirdiğiniz ve ziyaret
             ettiğiniz sayfalar gibi şeyleri izleyebilir. Google Analytics
             çerezleri hakkında daha fazla bilgi için resmi Google Analytics
-            sayfasına bakın.
-          </p>
-          <p class="policy-terms-texts">
+            sayfasına bakın. <br />
             Reklam sunmak için kullandığımız Google AdSense hizmeti, web
             genelinde daha alakalı reklamlar sunmak ve belirli bir reklamın size
             gösterilme sayısını sınırlamak için bir DoubleClick çerezi kullanır.
@@ -161,9 +164,9 @@
 
           <p class="policy-terms-texts">
             E-posta:
-            <a href="mailto:support@protopadventure.com" class="email-link">
-              support@protopadventure.com</a
-            >.
+            <a href="mailto:support@adventuregreatstar.com" class="email-link">
+              support@adventuregreatstar.com</a
+            >
           </p>
         </div>
       </section>
@@ -171,15 +174,15 @@
 
     <footer class="footer">
       <div class="footer-container">
+        <p class="footer-copyright">
+          "© 2024 Adventure Great Star. Tüm hakları saklıdır."
+        </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="cookie.html">Çerez Politikası</a>
           <a class="footer-text" href="policy.html">Gizlilik Politikası </a>
 
           <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
         </div>
-        <p class="footer-copyright">
-          © 2024 ProtoPad Adventure. Tüm hakları saklıdır.
-        </p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
